--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
+
   "license": "ISC",
+
   "dependencies": {
     "aws-sdk": "^2.1380.0",
     "axios": "^1.3.5",
