--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "pg-hstore": "^2.3.4",
     "read-excel-file": "^5.6.1",
     "sequelize": "^6.31.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "xml2js": "^0.5.0"
   }
 }
